# TheSnake

./: CMakeLists.txt  Configure.cmake
lib/: CMakeLists.txt  application.cpp  application.h
